# polars-pairing

./: .gitignore  404.html  Cargo.toml  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build.yml  documentation.yml
docs/: index.md  reference.md
polars_pairing/: __init__.py  utils.py
reference/: index.html
search/: search_index.json
src/: expressions.rs  lib.rs  pairing.rs
tests/: test_pairing.py  test_unpairing.py
